3..2...1...ready for take-off

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,14 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
+
+    <!--
+      <script
+        type="text/javascript"
+        src="//maps.googleapis.com/maps/api/js?key=AIzaSyDzsfrPmA00tpdz-zk9RWBtaf7Jp-2ZALw"
+      ></script>
+    -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Digi Pill</title>
   </head>
